--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,19 @@
   border-color: #7952b3;
   box-shadow: 0 0 0 3px rgba(121, 82, 179, 0.25);
 }
+
+/* table */
+.table-container {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.table-container th,
+.table-container td {
+  padding: 8px;
+  border: 1px solid rgb(222, 226, 230);
+}
+
+.table-container th {
+  font-weight: 700;
+}
