--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,46 @@
 .table-container th {
   font-weight: 700;
 }
+
+.text-center {
+  text-align: center;
+}
+/* drop down */
+.dropdown-container {
+  position: relative;
+  display: inline-block;
+  width: 130px;
+  height: 30px;
+}
+
+.dropdown-header {
+  cursor: pointer;
+  border: 1px solid #ccc;
+  padding: 5px;
+}
+
+.dropdown-list {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  max-height: 100px;
+  overflow-y: auto;
+  border: 1px solid #ccc;
+  border-top: none;
+  border-radius: 0 0 4px 4px;
+  background-color: #fff;
+}
+
+.dropdown-option {
+  cursor: pointer;
+  padding: 5px;
+}
+
+.dropdown-option:hover {
+  background-color: #f0f0f0;
+}
+
+.error {
+  color: red;
+}
